[workspace]
members = [
    "auth-manager",
    "idp-server",
    "ssh", "types",
    "users",
    "util"

]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rsa = "0.9.6"
pem = "3.0.4"
sshkeys = "0.3.3"
rand = "0.8"
ssh-keys = "0.1.4"
async-trait = "0.1.56"

