[package]
name = "idp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace=true}
async-trait = {workspace=true}
serde = {workspace=true}

types = {path = "../types"}

[lib]
crate-type = ["lib"]
name = "idp_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
